--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "marked": "^0.3.6",
     "prax": "0.0.93",
     "promise": "7.1.1",
+    "purelib": "0.0.3",
     "react": "15.4.1",
     "react-dom": "15.4.1",
     "react-router": "3.0.0",
@@ -57,6 +58,7 @@
     "transform-loader": "0.2.3",
     "webpack": "1.13.3",
     "webpack-dev-middleware": "1.8.4",
-    "webpack-hot-middleware": "2.13.2"
+    "webpack-hot-middleware": "2.13.2",
+    "xhttp": "^0.4.0"
   }
 }
