--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,20 @@
 {
-  "presets": ["es2015"],
   "plugins": [
+    "check-es2015-constants",
+    "transform-es2015-arrow-functions",
+    "transform-es2015-block-scoped-functions",
+    "transform-es2015-block-scoping",
+    "transform-es2015-computed-properties",
+    ["transform-es2015-destructuring", {"loose": true}],
+    "transform-es2015-function-name",
+    "transform-es2015-literals",
+    "transform-es2015-modules-commonjs",
+    "transform-es2015-parameters",
+    "transform-es2015-shorthand-properties",
+    ["transform-es2015-spread", {"loose": true}],
+    "transform-es2015-template-literals",
     "transform-object-rest-spread",
-    ["transform-runtime", {"polyfill": false}],
-    ["transform-react-jsx"],
-    "syntax-trailing-function-commas"
+    "transform-react-jsx",
+    ["transform-runtime", {"polyfill": false}]
   ]
 }
