--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "prax-graphql-demo",
   "version": "1.0.0a",
-  "private": false,
+  "private": true,
   "scripts": {
+    "gulp": "gulp",
     "start": "gulp watch",
     "dev": "gulp"
   },
@@ -15,50 +16,67 @@
   "author": "Yury Egorenkov <yury.egorenkov> (https://github.com/yury-egorenkov)",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "6.18.2",
+    "babel-core": "6.23.1",
     "babel-eslint": "7.1.1",
-    "babel-loader": "6.2.8",
-    "babel-plugin-syntax-trailing-function-commas": "6.13.0",
-    "babel-plugin-transform-object-rest-spread": "6.19.0",
-    "babel-plugin-transform-react-jsx": "6.8.0",
-    "babel-plugin-transform-runtime": "6.15.0",
-    "babel-preset-es2015": "6.18.0",
-    "babel-runtime": "6.18.0",
-    "browser-sync": "2.18.2",
+    "babel-loader": "6.3.2",
+    "babel-plugin-check-es2015-constants": "6.22.0",
+    "babel-plugin-syntax-trailing-function-commas": "6.22.0",
+    "babel-plugin-transform-es2015-arrow-functions": "6.22.0",
+    "babel-plugin-transform-es2015-block-scoped-functions": "6.22.0",
+    "babel-plugin-transform-es2015-block-scoping": "6.23.0",
+    "babel-plugin-transform-es2015-computed-properties": "6.22.0",
+    "babel-plugin-transform-es2015-destructuring": "6.23.0",
+    "babel-plugin-transform-es2015-function-name": "6.22.0",
+    "babel-plugin-transform-es2015-literals": "6.22.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "6.23.0",
+    "babel-plugin-transform-es2015-parameters": "6.23.0",
+    "babel-plugin-transform-es2015-shorthand-properties": "6.22.0",
+    "babel-plugin-transform-es2015-spread": "6.22.0",
+    "babel-plugin-transform-es2015-template-literals": "6.22.0",
+    "babel-plugin-transform-object-rest-spread": "6.23.0",
+    "babel-plugin-transform-react-jsx": "6.23.0",
+    "babel-plugin-transform-runtime": "6.23.0",
+    "babel-runtime": "6.23.0",
+    "browser-sync": "2.17.5",
     "connect-history-api-fallback": "1.3.0",
     "del": "2.2.2",
-    "envify": "3.4.1",
-    "eslint-plugin-react": "6.7.1",
-    "eslint_d": "4.2.0",
+    "envify": "4.0.0",
+    "eslint-plugin-react": "6.10.0",
+    "eslint_d": "4.2.1",
     "estraverse": "4.2.0",
     "estraverse-fb": "1.3.1",
     "font-awesome": "4.7.0",
     "gulp": "gulpjs/gulp#4.0",
     "gulp-autoprefixer": "3.1.1",
-    "gulp-clean-css": "2.0.13",
-    "gulp-if": "2.0.2",
-    "gulp-image-resize": "0.10.0",
-    "gulp-load-plugins": "1.4.0",
+    "gulp-clean-css": "3.0.3",
+    "gulp-gh-pages": "0.5.4",
+    "gulp-image-resize": "0.12.0",
+    "gulp-load-plugins": "1.5.0",
     "gulp-rsync": "gboston/gulp-rsync#3745b1580a156059ab02ab994fd1e932f603b8f8",
-    "gulp-sass": "2.3.2",
-    "gulp-statil": "0.1.0",
+    "gulp-sass": "3.1.0",
+    "gulp-statil": "0.5.0",
     "gulp-svgo": "1.0.3",
-    "gulp-util": "3.0.7",
+    "gulp-util": "3.0.8",
     "gulp-watch": "4.3.11",
+    "highlight.js": "9.9.0",
     "history": "3.2.1",
-    "lodash": "4.17.2",
-    "marked": "^0.3.6",
+    "http-proxy": "1.16.2",
+    "lodash": "4.17.4",
+    "marked": "0.3.6",
+    "moment": "2.17.1",
+    "normalize.css": "5.0.0",
     "prax": "0.0.93",
     "promise": "7.1.1",
     "purelib": "0.0.3",
-    "react": "15.4.1",
-    "react-dom": "15.4.1",
+    "react": "15.4.2",
+    "react-dom": "15.4.2",
     "react-router": "3.0.0",
     "stylebox": "0.0.8",
-    "transform-loader": "0.2.3",
-    "webpack": "1.13.3",
-    "webpack-dev-middleware": "1.8.4",
-    "webpack-hot-middleware": "2.13.2",
-    "xhttp": "^0.4.0"
+    "through2": "2.0.3",
+    "transform-loader": "0.2.4",
+    "webpack": "2.2.1",
+    "webpack-dev-middleware": "1.10.1",
+    "webpack-hot-middleware": "2.17.0",
+    "xhttp": "0.4.0"
   }
 }
