--- a/.babelrc
+++ b/.babelrc
@@ -14,7 +14,7 @@
     ["transform-es2015-spread", {"loose": true}],
     "transform-es2015-template-literals",
     "transform-object-rest-spread",
-    "transform-react-jsx",
+    ["transform-react-jsx", {"pragma": "createElement"}],
     ["transform-runtime", {"polyfill": false}]
   ]
 }
