--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "estraverse": "4.2.0",
     "estraverse-fb": "1.3.1",
     "font-awesome": "4.7.0",
+    "graphiql": "0.9.3",
     "gulp": "gulpjs/gulp#4.0",
     "gulp-autoprefixer": "3.1.1",
     "gulp-clean-css": "3.0.3",
