--- a/.eslintrc
+++ b/.eslintrc
@@ -17,7 +17,6 @@
     "dot-notation": ["error", {"allowKeywords": true}],
     "eqeqeq": ["error", "allow-null"],
     "indent": ["error", 2, {"SwitchCase": 1}],
-    "jsx-quotes": ["error", "prefer-single"],
     "new-cap": "off",
     "max-len": ["error", 100],
     "no-cond-assign": "error",
@@ -52,9 +51,11 @@
     "prefer-const": "error",
     "quote-props": ["error", "as-needed"],
     "quotes": ["error", "single", {"avoidEscape": true, "allowTemplateLiterals": true}],
+    "jsx-quotes": ["error", "prefer-single"],
+    "react/jsx-curly-spacing": "error",
+    "react/jsx-no-undef": "error",
     "react/jsx-uses-react": "error",
     "react/jsx-uses-vars": "error",
-    "react/jsx-curly-spacing": "error",
     "semi": ["error", "never"],
     "space-before-blocks": ["error", "always"],
     "space-in-parens": ["error", "never"],
