--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,9 @@
     "transform-es2015-arrow-functions",
     "transform-es2015-block-scoped-functions",
     "transform-es2015-block-scoping",
+    // Must come before "transform-es2015-classes"
+    ["transform-class-properties", {"spec": false}],
+    ["transform-es2015-classes", {"loose": true}],
     "transform-es2015-computed-properties",
     ["transform-es2015-destructuring", {"loose": true}],
     "transform-es2015-function-name",
@@ -13,8 +16,10 @@
     "transform-es2015-shorthand-properties",
     ["transform-es2015-spread", {"loose": true}],
     "transform-es2015-template-literals",
-    "transform-object-rest-spread",
-    ["transform-react-jsx", {"pragma": "createElement"}],
-    ["transform-runtime", {"polyfill": false}]
+    "transform-exponentiation-operator",
+    "syntax-trailing-function-commas",
+    ["transform-runtime", {"polyfill": false}],
+    ["transform-object-rest-spread", {"loose": true}],
+    "transform-react-jsx"
   ]
 }
