--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "babel-loader": "6.3.2",
     "babel-plugin-check-es2015-constants": "6.22.0",
     "babel-plugin-syntax-trailing-function-commas": "6.22.0",
+    "babel-plugin-transform-class-properties": "6.23.0",
     "babel-plugin-transform-es2015-arrow-functions": "6.22.0",
     "babel-plugin-transform-es2015-block-scoped-functions": "6.22.0",
     "babel-plugin-transform-es2015-block-scoping": "6.23.0",
+    "babel-plugin-transform-es2015-classes": "6.23.0",
     "babel-plugin-transform-es2015-computed-properties": "6.22.0",
     "babel-plugin-transform-es2015-destructuring": "6.23.0",
     "babel-plugin-transform-es2015-function-name": "6.22.0",
@@ -34,6 +36,7 @@
     "babel-plugin-transform-es2015-shorthand-properties": "6.22.0",
     "babel-plugin-transform-es2015-spread": "6.22.0",
     "babel-plugin-transform-es2015-template-literals": "6.22.0",
+    "babel-plugin-transform-exponentiation-operator": "6.22.0",
     "babel-plugin-transform-object-rest-spread": "6.23.0",
     "babel-plugin-transform-react-jsx": "6.23.0",
     "babel-plugin-transform-runtime": "6.23.0",
@@ -74,7 +77,7 @@
     "stylebox": "0.0.8",
     "through2": "2.0.3",
     "transform-loader": "0.2.4",
-    "webbs": "0.0.5",
+    "webbs": "0.0.4",
     "webpack": "2.2.1",
     "webpack-dev-middleware": "1.10.1",
     "webpack-hot-middleware": "2.17.0",
