--- a/package.json
+++ b/package.json
@@ -44,12 +44,15 @@
     "browser-sync": "2.17.5",
     "connect-history-api-fallback": "1.3.0",
     "del": "2.2.2",
+    "emerge": "0.0.28",
     "envify": "4.0.0",
     "eslint-plugin-react": "6.10.0",
     "eslint_d": "4.2.1",
+    "espo": "0.0.6",
     "estraverse": "4.2.0",
     "estraverse-fb": "1.3.1",
     "font-awesome": "4.7.0",
+    "fpx": "0.0.20",
     "gulp": "gulpjs/gulp#4.0",
     "gulp-autoprefixer": "3.1.1",
     "gulp-clean-css": "3.0.3",
